[build-system]
requires = ["uv_build>=0.7.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "xpypact"
version = "0.12.9"
requires-python = ">=3.11,<3.14" # connectorx==0.4.3 prevents <4
description = "\"Python workflow framework for FISPACT.\""
authors = [{ name = "dvp2015", email = "dmitri_portnov@yahoo.com" }]
readme = "README.rst"
license = { text = "MIT" }
keywords = ["nuclide", "FISPACT", "activation", "duckdb", "polars"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "duckdb (>=1.0.0)",
    "mckit-nuclides (>=0.3.2)",
    "multipledispatch (>=0.6.0)",
    "numpy (>=2.3.1)",
    "polars[all] (>=1.12.0)",
    "pyarrow (>=18.0.0)",         # this is not used directly, but is required by duckdb
    "msgspec (>=0.19.0)",
]

[project.urls]
homepage = "https://github.com/MC-kit/xpypact"
repository = "https://github.com/MC-kit/xpypact"
documentation = "https://xpypact.readthedocs.io"
Changelog = "https://github.com/MC-kit/xpypact/releases"

[dependency-groups]
dev = [
    "tomli>=2.0.1 ; python_version < '3.11'",
    { include-group = "pre_commit" },
    { include-group = "test" },
    { include-group = "coverage" },
    { include-group = "xdoctest" },
    { include-group = "typeguard" },
    { include-group = "mypy" },
    { include-group = "docs" },
    { include-group = "docs_auto" },
    { include-group = "ruff" },
    { include-group = "analyze" },
    { include-group = "sql" },
]
pre_commit = [
    "pre-commit>=2.15.0",
    "pydocstringformatter>=0.7.3",
    { include-group = "sql" },
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.0",
    "pytest-durations>=1.5.2",
    "pytest-emoji>=0.2.0",
    { include-group = "coverage" },
    { include-group = "xdoctest" },
]
coverage = ["coverage[toml]>=7.9.2"]
xdoctest = ["xdoctest[colors]>=1.2.0"]
typeguard = ["typeguard>=4.1.5"]
mypy = [
    "mypy>=1.2.0",
    "pep8-naming>=0.12.1",
    "types-setuptools>=80.9.0.20250529",
]
docs = ["sphinx>=8.2.3", "sphinx-autodoc-typehints>=3.2.0"]
docs_auto = ["sphinx-autobuild>=2024.10.3"]
ruff = ["ruff>=0.0.259"]
analyze = ["jupyterlab>=4.2.5", "jupytext>=1.16.4"]
sql = [
    "sqlfluff>=3.4.1",
]

[tool.pytest.ini_options]
minversion = "8.4"
cache_dir = '.cache/pytest'
norecursedirs = '''
*.egg-info
.*
build
data
dist
docs/_build
docs/examples
htmlcov
notebooks
tools
wrk
'''
python_functions = "test_*  profile_*"
addopts = '''
-ra
-q
--tb=short
--doctest-modules
--strict-markers
--ignore setup.py
--failed-first
--xdoctest
--pytest-durations-min=1
--pytest-resultlog="pytest-result.log"
'''
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE ALLOW_BYTES NUMBER"
testpaths = ["tests", "src"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
# xfail tests that pass should fail the test suite
xfail_strict = true
filterwarnings = [
    "error",
    # 'ignore:Implementing implicit namespace packages \(as specified in PEP 420\) is preferred to `pkg_resources.declare_namespace`',
    "ignore:.*not typechecking multipledispatch.dispatcher.*UserWarning",
    'ignore:.*io.FileIO \[closed\]',
    # 'ignore:.*Deprecated call to `pkg_resources.declare_namespace',
    'ignore:.*Implicit None on return values:DeprecationWarning',
    # # pandas 2.1.4 at python 3.12
    # 'ignore:.*datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
    # # openpyxl 3.1.2 qt python 3.12
    # 'ignore:.*datetime.datetime.utcnow\(\):DeprecationWarning',
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.xdoctest]
quiet = true
options = ""

[tool.coverage.paths]
source = ["src", ".nox/*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*_tab.py", "**/__init__.py", "tools/*.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
omit = ["*_tab.py", "**/__init__.py", "**/types.py"]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
ignore_errors = true
sort = "Cover"


# MyPy config
# See https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
#     https://dev.to/tusharsadhwani/the-comprehensive-guide-to-mypy-561m
[tool.mypy]
python_version = "3.13"
strict = true
follow_imports = "silent"
disallow_untyped_defs = true
files = "src/**/*.py"

[[tool.mypy.overrides]]
module = [
    "IPython.core.magic",
    "IPython.core.magic_arguments",
    "click",
    "click.testing",
    "dask.*",
    "duckdb",
    "loguru",
    "mckit_nuclides.*",
    "msgspec",
    "multipledispatch",
    "nox",
    "numpy",
    "numpy.testing",
    "pandas",
    "polars",
    "pytest",
    "scipy.constants",
    "scipy.sparse",
    "tomli",
    "tomllib",
    "xdoctest",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tomllib"]
allow_redefinition = true
disable_error_code = "no-redef"

[tool.check-manifest]
ignore = [
    "tests/*",
    "tools/*",
    "*.yaml",
]

[tool.jupytext]
# https://jupytext.readthedocs.io/en/latest/config.html
# Pair ipynb notebooks to py:percent text notebooks
formats = "ipynb,py:percent"

[tool.creosote]
paths = ["src"]
deps-file = "pyproject.toml"
sections = ["project.dependencies"]
exclude-deps = ["duckdb", "pyarrow"]
