[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.2,<0.10" ]

[project]
name = "xpypact"
version = "0.12.10"
description = "\"Python workflow framework for FISPACT.\""
readme = "README.rst"
keywords = [ "activation", "duckdb", "FISPACT", "nuclide", "polars" ]
license = { text = "MIT" }
authors = [ { name = "dvp2015", email = "dmitri_portnov@yahoo.com" } ]
requires-python = ">=3.12,<3.15"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "duckdb>=1",
  "mckit-nuclides>=0.3.2",
  "msgspec>=0.19",
  "numpy>=2.4",
  "polars[all]>=1.37",
  "pyarrow>=18",           # this is not used directly, but is required by duckdb
]

urls.Changelog = "https://github.com/MC-kit/xpypact/releases"
urls.documentation = "https://xpypact.readthedocs.io"
urls.homepage = "https://github.com/MC-kit/xpypact"
urls.repository = "https://github.com/MC-kit/xpypact"

[dependency-groups]
dev = [ { include-group = "style" }, { include-group = "test" } ]
test = [
  "pytest>=8.4.1",
  "pytest-cov>=7",
  "pytest-durations>=1.5.2",
  "pytest-emoji>=0.2",
  "pytest-mock>=3.14",
  "xdoctest>=1.2",
  { include-group = "coverage" }, # coverage may be used on its own, see GHA test
]
docs = [
  "rstcheck[sphinx,toml]>=6.2.5",
  "sphinx>=8.2.3",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-autodoc-typehints>=3.2",
  "sphinx-togglebutton>=0.3.2",
]
style = [
  { include-group = "lint" },
  { include-group = "mypy" },
  { include-group = "pre_commit" },
  { include-group = "pyright" },
  { include-group = "ruff" },
]
pre_commit = [
  "pre-commit>=4.3",
  { include-group = "sql" },
]
ruff = [ "ruff>=0.0.259" ]
mypy = [
  "mypy>=1.2",
  "pep8-naming>=0.12.1",
  "types-setuptools>=80.9.0.20250529",
]
lint = [
  "pylint",
  "pylint-per-file-ignores",
]
pyright = [
  "pyright>=1.1.406",
]
sql = [
  "sqlfluff>=3.4.1",
]
coverage = [ "coverage[toml]>=7.9.2" ]
# environments not in dev
typeguard = [ "typeguard>=4.1.5" ]
analyze = [ "jupyterlab>=4.2.5", "jupytext>=1.16.4" ]

[tool.pytest.ini_options]
minversion = "8.4"
cache_dir = '.cache/pytest'
norecursedirs = '''
*.egg-info
.*
build
data
dist
docs/_build
docs/examples
htmlcov
notebooks
tools
wrk
'''
python_functions = "test_*  profile_*"
addopts = '''
-ra
-q
--tb=short
--doctest-modules
--strict-markers
--ignore setup.py
--failed-first
--xdoctest
--pytest-durations-min=1
--pytest-resultlog="pytest-result.log"
'''
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE ALLOW_BYTES NUMBER"
testpaths = [ "tests", "src" ]
markers = [ "slow: marks tests as slow (deselect with '-m \"not slow\"')" ]
# xfail tests that pass should fail the test suite
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:.*not typechecking multipledispatch.dispatcher.*UserWarning",
  'ignore:.*io.FileIO \[closed\]',
  'ignore:.*Implicit None on return values:DeprecationWarning',
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.paths]
source = [ "src", ".nox/*/site-packages" ]

[tool.coverage.run]
branch = true
source = [ "src" ]
omit = [ "*_tab.py", "**/__init__.py", "tools/*.py" ]
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
omit = [ "*_tab.py", "**/__init__.py", "**/types.py" ]
# Regexes for lines to exclude from consideration
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self.debug",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
ignore_errors = true
sort = "Cover"

# MyPy config
# See https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
#     https://dev.to/tusharsadhwani/the-comprehensive-guide-to-mypy-561m

[tool.mypy]
python_version = "3.13"
cache_dir = ".cache/mypy"
files = "src/**/*.py"
follow_imports = "silent"
pretty = true
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "IPython.core.magic",
  "IPython.core.magic_arguments",
  "click",
  "click.testing",
  "cyclopts",
  "dask.*",
  "duckdb",
  "eliot",
  "eliot.*",
  "loguru",
  "mckit_nuclides.*",
  "msgspec",
  "multipledispatch",
  "nox",
  "numpy",
  "numpy.testing",
  "pandas",
  "polars",
  "pytest",
  "rich.*",
  "scipy.constants",
  "scipy.sparse",
  "tomli",
  "tomllib",
  "xdoctest",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [ "tomllib" ]
allow_redefinition = true
disable_error_code = "no-redef"

[tool.xdoctest]
quiet = true
options = ""

[tool.jupytext]
# https://jupytext.readthedocs.io/en/latest/config.html
# Pair ipynb notebooks to py:percent text notebooks
formats = "ipynb,py:percent"

[tool.creosote]
paths = [ "src" ]
deps-file = "pyproject.toml"
exclude-deps = [ "duckdb", "pyarrow" ]
sections = [ "project.dependencies" ]

[tool.rstcheck]
report_level = "ERROR"
ignore_messages = "(Unknown directive type \"(todo.*|automodule)\".$)"
